tests/rascal/negative/parse_errors/L2/case-reserved.ob
MODULE Bla;

BEGIN
  x := CASE
END Bla.